--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 x-shared-volumes: &shared_volumes
   - ./:/usr/src/app
-#  - ./data:/usr/src/app/data
+  - ./data:/usr/src/app/data
 
 services:
   db:
