--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,10 @@ __marimo__/
 !**/migrations/__init__.py
 
 
-celerybeat-schedule*celerybeat-schedule*
+# Celery stuff
+celerybeat-schedule*
+celerybeat.pid*
+
+# Celery stuff
+**/celerybeat-schedule*
+**/celerybeat.pid*
